English Reference Letters ChangeLog

***** ChangeLog for 0.9 compared to 1.0 *****
-NEW : Add break page option
-FIX : Contact models output a contact adress